# jayson-docs

./: .env.example  .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  .taurignore  AGENTS.md  AUTHORING.md  BAKEOFF.md  BLOCKERS.md  BUILD_BRIEF.md  CHART_CATALOGUE.md  CLAUDE.md  CONTEXT.md  DOCUMENT_SYSTEM_ARCHITECTURE.md  ERROR_HANDLING.md  LICENSE  NOTICE  OVERVIEW.md  README.md  ROLES.md  STATUS.md  blocks.catalogue.yaml  brand.example.yaml  eslint.config.mjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.cursor/: cli.json
.superset/: setup.sh
docs/: ARCHITECTURE.md  BLOCK_IMPLEMENTATION_GUIDE.md  BUILD_BRIEF.md  DECISIONS.md  DECISIONS_LOG.md  DOCUMENT_SYSTEM_ARCHITECTURE.md  MODELS.md  RELEASE.md  REPO_REVIEW.md  REPO_REVIEW_2026-06-05.md  SETUP_GUIDE.md  SETUP_INSTALL_FLOW.md  SETUP_PIPELINE.md  SKILL_AUTHORING.md  SLIDE_LAYOUT_LIBRARY.md  TASKS.md  TAURI_IPC.md  TYPES.md  UI_APP_SHELL.md  UI_LIBRARY.md  UI_REVIEW_PANEL.md  WORKFLOW.md  YAML_FORMAT.md  grilling-editor-v2.md  privacy-notice.md  setup-runbook.md
examples/: README.md  sample-block-patch.json  sample-comment-thread.json  sample-deck.yaml  sample-llm-batch-request.json  sample-llm-batch-response.json  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.signing.conf.json
src-tauri/capabilities/: main-window.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ipc/: authored_block.rs  config.rs  fs.rs  mod.rs  pdf.rs  types.rs
src-tauri/src/lint/: mod.rs  runner.rs  tests.rs
(+723 files in other folders)
