[package]
name = "docsystem"
version = "0.1.0"
description = "Consultancy document system — Tauri shell"
authors = ["Consultancy"]
edition = "2021"
rust-version = "1.88"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# Tauri 2.x ships a library crate.
name = "docsystem_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.4", features = ["protocol-asset"] }
tauri-plugin-fs = "2.0.3"
tauri-plugin-dialog = "2.0.1"
tauri-plugin-store = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
keyring = "3.6.1"          # Cross-platform OS keychain (D-22, D-23)
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.23.1", features = ["v4"] }
tauri-plugin-shell = "2.3.5"
base64 = "0.22.1"

[features]
# This feature is used for production builds where `devtools` is disabled.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"            # Strip panic-handling logic to shrink binary.
codegen-units = 1          # Allow more aggressive optimizations at link time.
lto = true                 # Link-time optimization.
opt-level = "s"            # Optimize for size — smaller installer.
strip = true               # Strip debug symbols.
